--- a/analisis/curso/pythogoreanExpectation.ipynb
+++ b/analisis/curso/pythogoreanExpectation.ipynb
@@ -76,7 +76,9 @@
     "import statsmodels.formula.api as smf\n",
     "import plotly.express as px\n",
     "from plotly.subplots import make_subplots\n",
-    "import plotly.graph_objects as go"
+    "import plotly.graph_objects as go\n",
+    "import plotly.io as pio\n",
+    "pio.renderers.default = 'plotly_mimetype'"
    ]
   },
   {
@@ -143,8 +145,7 @@
     "              from juego g\n",
     "              join equipo loc on g.local_id = loc.equipo_id\n",
     "              join equipo vis on g.visitante_id = vis.equipo_id\"\"\")\n",
-    "with engine.connect() as conn:\n",
-    "    lmb = pd.read_sql(query, conn)\n",
+    "lmb = pd.read_sql(query, engine)\n",
     "\n",
     "# se agregan estas columnas para poder aplicar funciones de agregación\n",
     "lmb['hwin'] = np.where(lmb['home_r'] > lmb['vis_r'], 1, 0)\n",
@@ -348,7 +349,7 @@
          "type": "float"
         }
        ],
-       "ref": "f41ecf94-6c31-488a-b2ef-f9afb5573bf1",
+       "ref": "ac9ede86-bead-4513-a8c1-1934be32664d",
        "rows": [
         [
          "0",
@@ -2033,7 +2034,7 @@
        "  <th>Date:</th>             <td>Tue, 10 Jun 2025</td> <th>  Prob (F-statistic):</th> <td>1.80e-37</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:28:39</td>     <th>  Log-Likelihood:    </th> <td>  171.56</td>\n",
+       "  <th>Time:</th>                 <td>20:57:13</td>     <th>  Log-Likelihood:    </th> <td>  171.56</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    94</td>      <th>  AIC:               </th> <td>  -339.1</td>\n",
@@ -2082,7 +2083,7 @@
        "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.831   \\\\\n",
        "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     457.5   \\\\\n",
        "\\textbf{Date:}             & Tue, 10 Jun 2025 & \\textbf{  Prob (F-statistic):} &  1.80e-37   \\\\\n",
-       "\\textbf{Time:}             &     19:28:39     & \\textbf{  Log-Likelihood:    } &    171.56   \\\\\n",
+       "\\textbf{Time:}             &     20:57:13     & \\textbf{  Log-Likelihood:    } &    171.56   \\\\\n",
        "\\textbf{No. Observations:} &          94      & \\textbf{  AIC:               } &    -339.1   \\\\\n",
        "\\textbf{Df Residuals:}     &          92      & \\textbf{  BIC:               } &    -334.0   \\\\\n",
        "\\textbf{Df Model:}         &           1      & \\textbf{                     } &             \\\\\n",
@@ -2118,7 +2119,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.831\n",
        "Method:                 Least Squares   F-statistic:                     457.5\n",
        "Date:                Tue, 10 Jun 2025   Prob (F-statistic):           1.80e-37\n",
-       "Time:                        19:28:39   Log-Likelihood:                 171.56\n",
+       "Time:                        20:57:13   Log-Likelihood:                 171.56\n",
        "No. Observations:                  94   AIC:                            -339.1\n",
        "Df Residuals:                      92   BIC:                            -334.0\n",
        "Df Model:                           1                                         \n",
@@ -2174,7 +2175,7 @@
        "  <th>Date:</th>             <td>Tue, 10 Jun 2025</td> <th>  Prob (F-statistic):</th> <td>3.08e-34</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:28:39</td>     <th>  Log-Likelihood:    </th> <td>  148.21</td>\n",
+       "  <th>Time:</th>                 <td>20:57:13</td>     <th>  Log-Likelihood:    </th> <td>  148.21</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    94</td>      <th>  AIC:               </th> <td>  -292.4</td>\n",
@@ -2223,7 +2224,7 @@
        "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.801   \\\\\n",
        "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     375.5   \\\\\n",
        "\\textbf{Date:}             & Tue, 10 Jun 2025 & \\textbf{  Prob (F-statistic):} &  3.08e-34   \\\\\n",
-       "\\textbf{Time:}             &     19:28:39     & \\textbf{  Log-Likelihood:    } &    148.21   \\\\\n",
+       "\\textbf{Time:}             &     20:57:13     & \\textbf{  Log-Likelihood:    } &    148.21   \\\\\n",
        "\\textbf{No. Observations:} &          94      & \\textbf{  AIC:               } &    -292.4   \\\\\n",
        "\\textbf{Df Residuals:}     &          92      & \\textbf{  BIC:               } &    -287.3   \\\\\n",
        "\\textbf{Df Model:}         &           1      & \\textbf{                     } &             \\\\\n",
@@ -2259,7 +2260,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.801\n",
        "Method:                 Least Squares   F-statistic:                     375.5\n",
        "Date:                Tue, 10 Jun 2025   Prob (F-statistic):           3.08e-34\n",
-       "Time:                        19:28:39   Log-Likelihood:                 148.21\n",
+       "Time:                        20:57:13   Log-Likelihood:                 148.21\n",
        "No. Observations:                  94   AIC:                            -292.4\n",
        "Df Residuals:                      92   BIC:                            -287.3\n",
        "Df Model:                           1                                         \n",
@@ -2315,7 +2316,7 @@
        "  <th>Date:</th>             <td>Tue, 10 Jun 2025</td> <th>  Prob (F-statistic):</th> <td>1.44e-29</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>19:28:39</td>     <th>  Log-Likelihood:    </th> <td>  140.35</td>\n",
+       "  <th>Time:</th>                 <td>20:57:14</td>     <th>  Log-Likelihood:    </th> <td>  140.35</td>\n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>    94</td>      <th>  AIC:               </th> <td>  -276.7</td>\n",
@@ -2364,7 +2365,7 @@
        "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.749   \\\\\n",
        "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     278.3   \\\\\n",
        "\\textbf{Date:}             & Tue, 10 Jun 2025 & \\textbf{  Prob (F-statistic):} &  1.44e-29   \\\\\n",
-       "\\textbf{Time:}             &     19:28:39     & \\textbf{  Log-Likelihood:    } &    140.35   \\\\\n",
+       "\\textbf{Time:}             &     20:57:14     & \\textbf{  Log-Likelihood:    } &    140.35   \\\\\n",
        "\\textbf{No. Observations:} &          94      & \\textbf{  AIC:               } &    -276.7   \\\\\n",
        "\\textbf{Df Residuals:}     &          92      & \\textbf{  BIC:               } &    -271.6   \\\\\n",
        "\\textbf{Df Model:}         &           1      & \\textbf{                     } &             \\\\\n",
@@ -2400,7 +2401,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.749\n",
        "Method:                 Least Squares   F-statistic:                     278.3\n",
        "Date:                Tue, 10 Jun 2025   Prob (F-statistic):           1.44e-29\n",
-       "Time:                        19:28:39   Log-Likelihood:                 140.35\n",
+       "Time:                        20:57:14   Log-Likelihood:                 140.35\n",
        "No. Observations:                  94   AIC:                            -276.7\n",
        "Df Residuals:                      92   BIC:                            -271.6\n",
        "Df Model:                           1                                         \n",
@@ -30568,7 +30569,7 @@
          "type": "float"
         }
        ],
-       "ref": "497c2fed-1f92-4f86-bb3e-6bbefa3e11ec",
+       "ref": "88656438-fc78-4f0d-a839-b00655892f7c",
        "rows": [
         [
          "wpct2",
